# Swarm_Thesis

./: .gitignore  CBF_validation_init.txt  CMakeLists.txt  README.md  cbf_file_init.txt  compile_commands.json  generated_bowl20_init.txt  generated_open20_init.txt  generated_wall50_init.txt  sim_out.txt
BENCMARKING/: .gdbinit  README.txt
DEBUG/: .gdbinit_FILE  .gdbinit_RAND
SRC/: .lvimrc  boids.c  boids.c.save  boids_struct.c  boids_struct.h  objs_struct.c  objs_struct.h  output_simulation_file.c  output_simulation_file.h  simulate.c  simulate.h  types.h  vector.c  vector.h
TESTING/: create_file_init.py  display_heatmap.py  generate_heatmap.py  generated_open50_init.txt  generated_open_init.txt  run_simulations.py
TESTING/Init_files/: generated_bowl100_leader0_init.txt  generated_bowl100_leaderall_init.txt  generated_bowl10_leader0_init.txt  generated_bowl10_leader1_init.txt  generated_bowl10_leaderall_init.txt  generated_bowl1_leader0_init.txt  generated_bowl1_leader1_init.txt  generated_bowl50_leader0_init.txt  generated_bowl50_leader1_init.txt  generated_bowl50_leaderall_init.txt  generated_bowl5_leader0_init.txt  generated_bowl5_leader1_init.txt  generated_bowl5_leaderall_init.txt  generated_open100_leader0_init.txt  generated_open100_leader1_init.txt  generated_open100_leaderall_init.txt  generated_open10_leader0_init.txt  generated_open10_leader1_init.txt  generated_open10_leaderall_init.txt  generated_open1_leader0_init.txt  generated_open1_leader1_init.txt  generated_open50_leader0_init.txt  generated_open50_leader1_init.txt  generated_open50_leaderall_init.txt  generated_open5_leader0_init.txt  generated_open5_leader1_init.txt  generated_open5_leaderall_init.txt  generated_wall100_leader0_init.txt  (+12 more)
Thesis/: references.bib  thesis.cls  thesis.tex
(+23 files in other folders)
